--- a/mover/config.sample.yaml
+++ b/mover/config.sample.yaml
@@ -3,9 +3,9 @@
 mappings:
   # NOTE: for zfs you need to give dataset, not the disk
   # ZFS dataset -> Unraid Array
-  - source: "/mnt/data-cache"
+  - source: "/mnt/data-cache/data"
     # in case of unraid to move all to Array
-    destination: "/mnt/user0"
+    destination: "/mnt/user0/data"
     min_age: "35d"
     max_age: "1y"
     # qbit clients
@@ -13,16 +13,20 @@ mappings:
       - host: localhost:8080
         user: !ENV QBIT_USER
         password: !ENV QBIT_PASSWORD
+        # we need to be able to match host path for container path
+        rewrite:
+          # container mount point for qbit
+          from: "/data"
+          # host path
+          to: "/mnt/data-cache/data"
   # ZFS dataset -> ZFS dataset
   - source: "/mnt/app-cache/documents"
     destination: "/mnt/rusty/documents"
     min_age: "3d"
   # XFS cache -> Unraid Array 
-  - source: "/mnt/other-cache"
-    destination: "/mnt/user0"
+  - source: "/mnt/other-cache/share1"
+    destination: "/mnt/user0/share1"
     min_age: "3d"
-    include:
-      - "photos"
 ignore:
   - "**/.Orphaned"
   - "**/.RecycleBin"
