--- a/mover/requirements.txt
+++ b/mover/requirements.txt
@@ -1,5 +1,6 @@
-pyaml-env==1.2.2
-pytimeparse2==1.7.1
-qbittorrent-api==2025.5.0
-plexapi==4.17.0
-httpx==0.28.1
+pyaml-env>=1.2.2
+pytimeparse2>=1.7.1
+qbittorrent-api>=2025.5.0
+plexapi>=4.17.0
+httpx>=0.28.1
+retrying>=1.4.2
